--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=server
+spring.config.import=optional:file:.env[.properties]
+
+spring.datasource.url=${DB_URL}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
