--- a/server/pom.xml
+++ b/server/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>okhttp</artifactId>
             <version>5.0.0-alpha.12</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
