--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: "./server"
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: ./server/src/main/resources/.env
     volumes:
       - ./server/src:/app/src
     ports:
